Add CapViewer3D React component with GLB loader, zoom controls, and color customization

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ pnpm-debug.log*
 
 # jetbrains setting folder
 .idea/
+
+# Large 3D model files (stored locally, not in git)
+public/models/*.glb
+public/models/*.gltf
